--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,14 @@ project(MyProject)
 # Add your source files here
 set(SOURCES 
     main.c
+    src/players.c
 )
 
 find_package(cjson REQUIRED)
 find_library(CJSON_LIB cjson)
 # Add your header files here
 set(HEADERS 
+    include/players.h
 )
 # 定义 DEBUG 宏
 # target_compile_definitions(MyTargetName PRIVATE DEBUG)
