添加了实现的注释

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
     main.c
     src/players.c
     src/init_play.c
+    src/map.c
 )
 
 # 查找cjson库
@@ -23,6 +24,7 @@ find_library(CJSON_LIB cjson)
 set(HEADERS 
     include/players.h
     include/init_play.h
+    include/map.h
 )
 
 # 添加头文件路径
