--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(SOURCES 
     main.c
     src/players.c
-    src/init_play.c
+    src/tool_house.c
 )
 
 # 查找cjson库
@@ -22,7 +22,7 @@ find_library(CJSON_LIB cjson)
 # 添加头文件
 set(HEADERS 
     include/players.h
-    include/init_play.h
+    include/tool_house.h
 )
 
 # 添加头文件路径
