feat: Add new game features and functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,13 @@ set(SOURCES
     src/help.c
     src/interaction.c
     src/roll.c
+    src/gifthouse.c
+    src/mine_earth.c
+    src/earthup.c
+    src/tool_house.c
+    src/buy_earth.c
+    src/pass_road_money.c
+
 )
 
 # 查找cjson库
@@ -33,6 +40,12 @@ set(HEADERS
     include/help.h
     include/interaction.h
     include/roll.h
+    include/gifthouse.h
+    include/mine_earth.h
+    include/earthup.h
+    include/tool_house.h
+    include/buy_earth.h
+    include/pass_road_money.h
 )
 
 # 添加头文件路径
